# ImageSourcer

./: .gitignore  README.md  background.js  manifest.json
ImageSourcerHost/: .clangd  CMakeLists.txt  buildkeyexe.bat  buildmain.bat  create_reg.cpp  main.cpp  manifest.json
